# Object-Tracking

./: CMakeLists.txt  README.md  main.py  test_camera.cpp  tracking.hpp
TrackingLib/: CMakeLists.txt
TrackingLib/include/: tracking.hpp
TrackingLib/src/: KalmanFilter.cpp  MeanShift.cpp  RANSAC.cpp
calibration_camera/: CMakeLists.txt  calibration_camera.sh  demo  demo.cpp  getCheker.py  out_camera_data.yml
calibration_camera/imgs/: calibration  imagelist_creator
calibration_camera/src/: calibration_camera.sh  demo  getCheker.py
calibration_camera/src/demo_source/: CMakeLists.txt  demo.cpp
utils/: Camera.hpp  camera.hpp  clock.hpp  future.hpp
